--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -1,45 +1,81 @@
-<nav class="navbar navbar-expand-lg bg-body-tertiary bg-dark" data-bs-theme="dark">
-  <div class="container-fluid">
-    <a class="navbar-brand" href="#">Blogify</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
-      aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark shadow-sm">
+  <div class="container-fluid px-4">
+
+    <!-- ================= Logo ================= -->
+    <a class="navbar-brand d-flex align-items-center" href="/">
+      <img src="/images/logo.png" alt="Blogify Logo" style="height: 48px; width: auto;">
+    </a>
+
+    <!-- Mobile Toggle -->
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse" id="navbarNavDropdown">
-      <ul class="navbar-nav">
+
+    <div class="collapse navbar-collapse" id="navbarContent">
+
+      <!-- ================= Center Search (Flexible) ================= -->
+      <div class="flex-grow-1 px-4">
+        <form action="/search" method="GET" class="d-flex">
+          <input type="text" name="query" class="form-control me-2" placeholder="Search blogs..." style="height: 44px;"
+            required>
+          <button class="btn btn-outline-light px-4" type="submit">
+            Search
+          </button>
+        </form>
+      </div>
+
+      <!-- ================= Right Navigation ================= -->
+      <ul class="navbar-nav align-items-center ms-auto">
+
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="/">Home</a>
+          <a class="nav-link text-light" href="/">Home</a>
         </li>
 
-        <% if (locals.user) { %>
-          <li class="nav-item">
-            <a class="nav-link" href="/blog/add-new">Add Blog</a>
-          </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              <%= user.fullName %>
+        <% if (user) { %>
+
+          <li class="nav-item ms-3">
+            <a class="btn btn-outline-light" href="/blog/add-new">
+              + Add Blog
             </a>
-            <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="/user/logout">Logout</a></li>
-            </ul>
-          </li>
-        <% } else { %>
-          <li class="nav-item">
-            <a class="nav-link" href="/user/signup">Create Account</a>
           </li>
 
-          <li class="nav-item">
-            <a class="nav-link" href="/user/signin">Signin</a>
+          <li class="nav-item dropdown ms-3">
+            <a class="nav-link dropdown-toggle text-light d-flex align-items-center" href="#" role="button"
+              data-bs-toggle="dropdown">
+
+              <img src="<%= user.profileImageURL %>" alt="Profile" class="rounded-circle me-2"
+                style="height: 32px; width: 32px; object-fit: cover;">
+
+              <%= user.fullName %>
+            </a>
+
+            <ul class="dropdown-menu dropdown-menu-end">
+              <li>
+                <a class="dropdown-item" href="/user/logout">
+                  Logout
+                </a>
+              </li>
+            </ul>
           </li>
-        <% } %> 
+
+          <% } else { %>
+
+            <li class="nav-item ms-3">
+              <a class="nav-link text-light" href="/user/signin">
+                Signin
+              </a>
+            </li>
+
+            <li class="nav-item ms-3">
+              <a class="btn btn-outline-light" href="/user/signup">
+                Create Account
+              </a>
+            </li>
+
+            <% } %>
+
       </ul>
+
     </div>
   </div>
 </nav>
-
-<% if (locals.error) { %>
-  <div class="container mt-4"><div class="alert alert-danger" role="alert">
-    <%= locals.error %>
-  </div></div>
-
-<% } %>
